# openpose_ros

./: CMakeLists.txt  package.xml
include/openpose_ros/: openpose_ros.hpp
src/: openpose_ros.cpp  openpose_ros_copy.cpp  openpose_ros_demo.cpp
